--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   google_sign_in: ^5.4.3
   google_fonts: ^5.0.0
   expandable: ^5.0.1
-
-
+  expand_widget: ^3.1.1
+  animated_text_kit: ^4.2.2
+  firebase_core: ^2.13.1
+  list_wheel_scroll_view_nls: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +34,8 @@ dev_dependencies:
 
 flutter:
 
+  assets:
+    - images/
  
   uses-material-design: true
   fonts:
